Documentation edits made through Mintlify web editor

--- a/guides/getting-started/wifi-connection.mdx
+++ b/guides/getting-started/wifi-connection.mdx
@@ -16,31 +16,32 @@ All students and staff can connect to the secure SAS wireless network using thei
 
 <Steps>
   <Step title="Network Name">
-    Look for the network: **SAS** or **SAS-Secure**
+    Look for the network: **SAS**
   </Step>
-
   <Step title="Username">
     Use your **SAS username** (without @sas.edu.sg)
 
     Example: If your email is `edtech@sas.edu.sg`, use `edtech`
   </Step>
-
   <Step title="Password">
     Use your **SAS password** (same as Google and ClassLink)
   </Step>
 </Steps>
 
 <CodeGroup>
+
 ```text WiFi Login
-Network: SAS or SAS-Secure
+Network: SAS
 Username: edtech
 Password: your-sas-password
 ```
+
 
 ```text Important
 ✓ Username WITHOUT @sas.edu.sg
 ✓ Same password for WiFi, Google, ClassLink
 ```
+
 </CodeGroup>
 
 ## Connecting Your Device
@@ -52,7 +53,7 @@ Password: your-sas-password
     1. Open **Settings** app
     2. Tap **Wi-Fi**
     3. Make sure Wi-Fi is **ON** (toggle should be green)
-    4. Select network: **SAS** or **SAS-Secure**
+    4. Select network: **SAS**
     5. Enter your **SAS username** (without @sas.edu.sg)
     6. Enter your **SAS password**
     7. Tap **Join**
@@ -61,17 +62,16 @@ Password: your-sas-password
     <Tip>
       **Auto-Connect**: Once connected, your iPad will automatically connect to SAS WiFi when in range!
     </Tip>
-
     **First Time Only:**
+
     - You may need to accept a certificate
     - Trust the "SAS" certificate when prompted
   </Tab>
-
   <Tab title="MacBook (macOS)">
     **Connect MacBook to SAS WiFi:**
 
     1. Click the **WiFi icon** in the menu bar (top right)
-    2. Select network: **SAS** or **SAS-Secure**
+    2. Select network: **SAS**
     3. Enter your **SAS username** (without @sas.edu.sg)
     4. Enter your **SAS password**
     5. Click **Join**
@@ -85,23 +85,20 @@ Password: your-sas-password
            - System Settings → Network → WiFi → Advanced
            - Select "SAS" → Click minus (-) to remove
            - Try connecting again
-
         2. **Check credentials:**
            - Username must be WITHOUT @sas.edu.sg
            - Password is case-sensitive
-
         3. **Update macOS:**
            - System Settings → General → Software Update
            - Install any available updates
       </Accordion>
     </AccordionGroup>
   </Tab>
-
   <Tab title="Windows Laptop (BYOD)">
     **Connect Windows PC to SAS WiFi:**
 
     1. Click **WiFi icon** in system tray (bottom right)
-    2. Click **SAS** or **SAS-Secure**
+    2. Click **SAS**
     3. Click **Connect**
     4. Enter your **SAS username** (without @sas.edu.sg)
     5. Enter your **SAS password**
@@ -109,17 +106,17 @@ Password: your-sas-password
     7. Accept certificate if prompted
 
     **Advanced Settings (if needed):**
+
     - Security type: WPA2-Enterprise
     - Encryption: AES
     - Authentication: PEAP or TTLS
   </Tab>
-
   <Tab title="Chromebook (BYOD)">
     **Connect Chromebook to SAS WiFi:**
 
     1. Click **time** in bottom right corner
     2. Click **WiFi** icon (or Settings)
-    3. Select network: **SAS** or **SAS-Secure**
+    3. Select network: **SAS**
     4. **EAP method**: PEAP
     5. **Phase-2 authentication**: MSCHAPV2
     6. **Identity**: Your SAS username (without @sas.edu.sg)
@@ -127,15 +124,16 @@ Password: your-sas-password
     8. Click **Connect**
 
     **Certificate:**
+
     - Select "Do not check" or accept SAS certificate
   </Tab>
-
   <Tab title="Personal Devices">
     **Connect Phone/Tablet to SAS WiFi:**
 
     **iPhone/Android Phone:**
+
     1. Open **Settings** → **WiFi**
-    2. Select **SAS** or **SAS-Secure**
+    2. Select **SAS**
     3. Enter **SAS username** (without @sas.edu.sg)
     4. Enter **SAS password**
     5. Tap **Join/Connect**
@@ -162,10 +160,8 @@ Your SAS credentials work across all systems, but the format varies:
     Password: your-password
     ```
 
-    ❌ Don't use: `edtech@sas.edu.sg`
-    ✅ Use: `edtech`
+    ❌ Don't use: `edtech@sas.edu.sg` ✅ Use: `edtech`
   </Accordion>
-
   <Accordion title="Google Login" icon="google">
     **Email format:** Full email address
 
@@ -174,10 +170,8 @@ Your SAS credentials work across all systems, but the format varies:
     Password: your-password
     ```
 
-    ❌ Don't use: `edtech`
-    ✅ Use: `edtech@sas.edu.sg`
+    ❌ Don't use: `edtech` ✅ Use: `edtech@sas.edu.sg`
   </Accordion>
-
   <Accordion title="ClassLink Login" icon="grid-2">
     **Username format:** Just your username
 
@@ -186,13 +180,13 @@ Your SAS credentials work across all systems, but the format varies:
     Password: your-password
     ```
 
-    ❌ Don't use: `edtech@sas.edu.sg`
-    ✅ Use: `edtech`
+    ✅ Use: `edtech` or `edtech@sas.edu.sg`
   </Accordion>
 </AccordionGroup>
 
 <Tip>
   **Remember**:
+
   - **WiFi & ClassLink** = username only
   - **Google** = full email address
   - **Password** = always the same!
@@ -211,13 +205,12 @@ Your SAS credentials work across all systems, but the format varies:
     - Automatic access to school resources
     - Best performance
   </Card>
-
   <Card title="SAS-Guest" icon="wifi" color="#E51322">
     **Guest Network**
 
     - For visitors and parents
     - Limited access
-    - No credentials required
+    - Captove portal, enter name and email or phone, details will be sent via email or sms for your login. 
     - Internet access only
   </Card>
 </CardGroup>
@@ -227,6 +220,7 @@ Your SAS credentials work across all systems, but the format varies:
 When connected to SAS WiFi:
 
 ✅ **Full Access:**
+
 - Google Workspace (Gmail, Drive, Docs, etc.)
 - ClassLink and all school apps
 - PowerSchool, Veracross, other SAS systems
@@ -235,6 +229,7 @@ When connected to SAS WiFi:
 - School file servers (staff)
 
 🔒 **Secure Connection:**
+
 - All traffic is encrypted
 - Protected from outside access
 - Content filtering for safety
@@ -249,19 +244,16 @@ When connected to SAS WiFi:
        - Username WITHOUT @sas.edu.sg ✓
        - Password is correct and case-sensitive ✓
        - No extra spaces in username or password ✓
-
     2. **Forget and reconnect:**
        - Remove/forget the SAS network
        - Turn WiFi off and on
        - Search for SAS network again
        - Re-enter credentials
-
     3. **Restart device:**
        - Completely power off your device
        - Wait 10 seconds
        - Power back on
        - Try connecting again
-
     4. **Check WiFi is working:**
        - Can others connect to SAS WiFi?
        - Try SAS-Guest to test connection
@@ -269,7 +261,6 @@ When connected to SAS WiFi:
 
     **Still not working?** Contact [ithelp@sas.edu.sg](mailto:ithelp@sas.edu.sg)
   </Accordion>
-
   <Accordion title="Connected but no internet" icon="globe-slash">
     **Troubleshooting steps:**
 
@@ -277,24 +268,20 @@ When connected to SAS WiFi:
        - Check WiFi icon shows connected
        - Look for "No Internet" message
        - Try opening a webpage
-
     2. **Renew connection:**
        - Disconnect from WiFi
        - Wait 5 seconds
        - Reconnect to SAS network
-
     3. **Clear DNS cache:**
        - **macOS**: Terminal → `sudo dscacheutil -flushcache`
        - **Windows**: Command Prompt → `ipconfig /flushdns`
        - **iPad/iPhone**: Restart device
-
     4. **Try different website:**
        - Some sites may be blocked
        - Try google.com or sas.edu.sg
 
     **Persistent issues?** Email [ithelp@sas.edu.sg](mailto:ithelp@sas.edu.sg)
   </Accordion>
-
   <Accordion title="Keeps disconnecting" icon="rotate">
     **Stability issues:**
 
@@ -302,51 +289,51 @@ When connected to SAS WiFi:
        - Move closer to access point
        - Avoid interference (microwaves, thick walls)
        - Try a different location
-
     2. **Update device:**
        - Install latest iOS/macOS/Windows updates
        - Update network drivers (Windows)
-
     3. **Forget other networks:**
        - Remove old/unused WiFi networks
        - Prevent auto-switching between networks
-
     4. **Device-specific:**
        - iPad: Settings → General → Reset → Reset Network Settings
        - MacBook: Remove network preferences and reconnect
 
     **Ongoing problems?** Contact [ithelp@sas.edu.sg](mailto:ithelp@sas.edu.sg)
   </Accordion>
-
   <Accordion title="Certificate errors or warnings" icon="certificate">
     **Security certificate issues:**
 
     **What it means:**
+
     - SAS WiFi uses security certificates
     - Your device needs to trust the SAS certificate
     - This is normal and safe
 
     **What to do:**
+
     1. When prompted, click **Trust** or **Accept**
     2. Certificate name should show "SAS" or similar
     3. If unsure, contact IT before accepting
 
     **Don't see certificate prompt?**
+
     - May have been accepted previously
     - Connection should work normally
 
     **Certificate rejected?** Contact [ithelp@sas.edu.sg](mailto:ithelp@sas.edu.sg)
   </Accordion>
-
   <Accordion title="I forgot my password" icon="key">
     **Password reset:**
 
     **For Students:**
+
     1. Ask your teacher for help
     2. Visit the IT Help Desk with student ID
     3. Parents can email [ithelp@sas.edu.sg](mailto:ithelp@sas.edu.sg)
 
     **For Staff:**
+
     1. Use the self-service password reset portal
     2. Contact [ithelp@sas.edu.sg](mailto:ithelp@sas.edu.sg)
     3. Visit IT Help Desk with staff ID
@@ -361,8 +348,9 @@ When connected to SAS WiFi:
 
 <Tip>
   **Stay Connected:**
+
   - ✓ Keep your device's OS and software updated
-  - ✓ Only connect to "SAS" or "SAS-Secure" networks
+  - ✓ Only connect to the "SAS" network
   - ✓ Never share your SAS password
   - ✓ Sign out when using shared devices
   - ✓ Report connectivity issues to IT promptly
@@ -382,6 +370,7 @@ When connected to SAS WiFi:
 </Note>
 
 **From Home:**
+
 - Connect to your home WiFi
 - Access Google, ClassLink using your SAS account
 - Use VPN if required for certain resources (staff)
@@ -392,15 +381,12 @@ When connected to SAS WiFi:
   <Card title="Email Accounts" icon="envelope" href="/guides/accounts/email">
     Learn about SAS email and credentials
   </Card>
-
   <Card title="ClassLink" icon="grid-2" href="/guides/accounts/classlink">
     Access apps with ClassLink
   </Card>
-
   <Card title="Google Workspace" icon="google" href="/guides/accounts/google-workspace">
     Use Google at SAS
   </Card>
-
   <Card title="Device Information" icon="laptop-mobile" href="/guides/devices/device-information">
     SAS devices by grade level
   </Card>
@@ -412,9 +398,8 @@ When connected to SAS WiFi:
   <Card title="IT Support" icon="laptop" href="mailto:ithelp@sas.edu.sg">
     **WiFi and network issues**
 
-    Email: ithelp@sas.edu.sg
+    Email: [ithelp@sas.edu.sg](mailto:ithelp@sas.edu.sg)
   </Card>
-
   <Card title="Password Reset" icon="key" href="mailto:ithelp@sas.edu.sg">
     **Forgot your password?**
 
