Documentation edits made through Mintlify web editor

--- a/guides/devices/device-information.mdx
+++ b/guides/devices/device-information.mdx
@@ -14,13 +14,11 @@ Singapore American School is an **Apple device school** with a carefully structu
 
     Students use iPads for interactive learning, educational apps, and digital resources.
   </Card>
-
   <Card title="Grade 6 - 8" icon="laptop" color="#E51322">
     **MacBook Air**
 
     Middle school students use MacBook Air laptops for coursework and collaboration.
   </Card>
-
   <Card title="Grade 9 - 12" icon="laptop-code" color="#1A4190">
     **BYOD (Bring Your Own Device)**
 
@@ -39,6 +37,7 @@ Singapore American School is an **Apple device school** with a carefully structu
     **Device:** iPad (school-provided)
 
     **What students can do:**
+
     - Access educational apps through ClassLink
     - Create presentations and digital projects
     - Read digital books and resources
@@ -46,8 +45,9 @@ Singapore American School is an **Apple device school** with a carefully structu
     - Collaborate with classmates
 
     **Management:**
+
     - Devices are managed by SAS IT
-    - Apps are automatically installed via ClassLink
+    - Apps are automatically installed via JAMF and access granted by Classlink
     - Parental controls are configured
   </Accordion>
 </AccordionGroup>
@@ -61,6 +61,7 @@ Singapore American School is an **Apple device school** with a carefully structu
     **Device:** MacBook Air (school-provided)
 
     **What students can do:**
+
     - Use Google Workspace (Docs, Sheets, Slides)
     - Access learning platforms via ClassLink
     - Code and develop projects
@@ -68,6 +69,7 @@ Singapore American School is an **Apple device school** with a carefully structu
     - Research and write academic papers
 
     **Management:**
+
     - Devices are managed by SAS IT
     - Pre-configured with essential software
     - Access to all school systems and apps
@@ -83,17 +85,20 @@ Singapore American School is an **Apple device school** with a carefully structu
     **Device:** Student's own device (BYOD - Bring Your Own Device)
 
     **Requirements:**
+
     - Must meet SAS technical specifications
     - Compatible with school systems and software
     - Recommended: MacBook or compatible laptop
 
     **What students can do:**
+
     - Full access to Google Workspace
     - Use ClassLink for all applications
     - Connect to SAS WiFi network
     - Complete all coursework and projects
 
     **Support:**
+
     - Students responsible for device maintenance
     - SAS IT provides connectivity and software support
     - Technical specifications available from IT
@@ -118,15 +123,12 @@ All devices at SAS integrate with our core technology platforms:
   <Card title="WiFi Connection" icon="wifi" href="/guides/getting-started/wifi-connection">
     Learn how to connect your device to SAS WiFi
   </Card>
-
   <Card title="ClassLink Guide" icon="grid-2" href="/guides/accounts/classlink">
     Access all your apps with ClassLink
   </Card>
-
   <Card title="Google Workspace" icon="google" href="/guides/accounts/google-workspace">
     Use Gmail, Docs, Sheets, and Slides
   </Card>
-
   <Card title="Email Accounts" icon="envelope" href="/guides/accounts/email">
     Learn about SAS email accounts
   </Card>
