Add division-specific technology guides and update existing documentation
**Major Updates:**

## New Division-Specific Guides (3 comprehensive guides):

1. **Elementary Technology Guide** (guides/divisions/elementary-technology.mdx):
   - 1:1 iPad program details (Grades 1-5)
   - Standard iPad with case, earbuds, and carry pouch
   - Google Apps for Education integration
   - Parent-gifted app installation process
   - iTunes account setup in parent's country
   - Digital Citizenship Agreement and expectations
   - Student blogs for reflection
   - Typing practice and skill development
   - JAMF management and parental controls
   - Content filtering and monitoring
   - Device care and home use policies
   - Tech Help Center services

2. **Middle School Technology Guide** (guides/divisions/middle-school-technology.mdx):
   - 1:1 MacBook Air program (13-inch, Grades 6-8)
   - Complete package: laptop, power supply, earbuds, case
   - Google Classroom as PRIMARY learning management system
   - Students have admin rights for software installation
   - Typing expectation: 40 WPM at 95% accuracy
   - Daily requirements: bring laptop fully charged
   - No laptops in cafeteria, headphones-only zone
   - No violent games policy
   - Repair cost policy: $200 first / 50% second / 100% third incident
   - Digital Citizenship Agreement
   - JAMF management with student admin rights
   - Tech Help Center and loaner devices

3. **High School BYOD Guide** (guides/divisions/high-school-byod.mdx):
   - MANDATORY Bring Your Own Device program (Grades 9-12)
   - Minimum specifications: 4GB RAM, 256GB storage, 802.11N wireless
   - Operating system: macOS Ventura 13+ or Windows 11 (English)
   - Required accessories: webcam, earbuds/headset with mic
   - Purchasing guidance: local retailers (Harvey Norman, Courts, Challenger)
   - Budget considerations and recommendations
   - Daily expectations: fully charged, backup to Google Drive
   - Short-term Chromebook loans during repairs ONL

--- a/guides/accounts/classlink.mdx
+++ b/guides/accounts/classlink.mdx
@@ -14,31 +14,63 @@ ClassLink is your central hub for accessing all SAS applications and resources. 
 
 ## ClassLink Features
 
-<CardGroup cols={2}>
-  <Card title="LaunchPad" icon="rocket" color="#1A4190">
-    **Your App Dashboard**
+<Tabs>
+  <Tab title="For Students">
+    <CardGroup cols={2}>
+      <Card title="LaunchPad" icon="rocket" color="#1A4190">
+        **Your Virtual Backpack**
 
-    Find all your assigned apps in one place. Click any app to launch it automatically.
-  </Card>
+        All your apps in one place. Click any app to launch it automatically - no passwords needed!
+      </Card>
 
-  <Card title="Single Sign-On" icon="key" color="#E51322">
-    **Automatic Login**
+      <Card title="My Classes" icon="book-open" color="#E51322">
+        **See Your Classes**
 
-    No need to remember multiple passwords. ClassLink signs you in automatically.
-  </Card>
+        View all your classes and the apps assigned by each teacher in one organized place.
+      </Card>
 
-  <Card title="Rostering" icon="users" color="#1A4190">
-    **Smart App Assignment**
+      <Card title="One-Click Access" icon="mouse-pointer" color="#1A4190">
+        **6,000+ Apps Available**
 
-    Apps are automatically assigned based on your grade level and classes.
-  </Card>
+        Instant access to thousands of learning, productivity, and educational apps.
+      </Card>
 
-  <Card title="Cross-Device Access" icon="laptop-mobile" color="#E51322">
-    **Works Everywhere**
+      <Card title="Any Device" icon="laptop-mobile" color="#E51322">
+        **Works Everywhere**
 
-    Access your apps from any device - iPad, MacBook, or home computer.
-  </Card>
-</CardGroup>
+        Access from iPad, MacBook, home computer, or any web browser.
+      </Card>
+    </CardGroup>
+  </Tab>
+
+  <Tab title="For Teachers">
+    <CardGroup cols={2}>
+      <Card title="My Classes" icon="chalkboard-user" color="#1A4190">
+        **Manage All Your Classes**
+
+        Central hub to view all your classes, share apps, and communicate with students.
+      </Card>
+
+      <Card title="Assign Apps" icon="square-plus" color="#E51322">
+        **Share Class-Specific Apps**
+
+        Assign specific apps to specific classes - students see them in their LaunchPad.
+      </Card>
+
+      <Card title="Track Engagement" icon="chart-line" color="#1A4190">
+        **Student Analytics**
+
+        See which students are using which apps and monitor engagement levels.
+      </Card>
+
+      <Card title="Communicate" icon="message" color="#E51322">
+        **Share Information**
+
+        Post important messages and updates to your classes through ClassLink.
+      </Card>
+    </CardGroup>
+  </Tab>
+</Tabs>
 
 ## Signing In to ClassLink
 
@@ -164,6 +196,166 @@ Once logged in, you'll see your **LaunchPad** with all assigned apps:
     </Note>
   </Accordion>
 </AccordionGroup>
+
+## My Classes (For Students)
+
+### Your Virtual Backpack
+
+**My Classes** is where students see all their classes in one organized view.
+
+<Steps>
+  <Step title="Access My Classes">
+    In ClassLink LaunchPad, click **My Classes** to see all your classes
+  </Step>
+
+  <Step title="View Class-Specific Apps">
+    Each class shows apps that your teacher assigned specifically for that class
+  </Step>
+
+  <Step title="Launch Apps">
+    Click any app within a class to open it - automatically signed in!
+  </Step>
+
+  <Step title="Stay Organized">
+    See all your classes in one place, making it easy to find the right app for each subject
+  </Step>
+</Steps>
+
+<Tip>
+  **Finding Class Apps**: If your teacher assigned an app for a specific class (like Science or Math), look in My Classes rather than the main LaunchPad!
+</Tip>
+
+## My Classes (For Teachers)
+
+### Managing Classes and Apps
+
+**My Classes** is the central hub for teachers to manage their classes, assign apps, track student engagement, and communicate with students.
+
+<Tabs>
+  <Tab title="Assigning Apps to Classes">
+    **Share Apps with Students:**
+
+    <Steps>
+      <Step title="Open My Classes">
+        Log in to ClassLink and navigate to **My Classes**
+      </Step>
+
+      <Step title="Select a Class">
+        Choose the class you want to assign apps to
+      </Step>
+
+      <Step title="Add Apps">
+        Click **Add App** or **Assign App**
+        - Browse from 6,000+ available apps
+        - Search by name or category
+        - Select apps relevant to your class
+      </Step>
+
+      <Step title="Students See Apps">
+        Apps appear in students' LaunchPad and in their My Classes view for that specific class
+      </Step>
+    </Steps>
+
+    **Benefits:**
+    - ✅ Students only see apps relevant to each class
+    - ✅ Reduces clutter in student LaunchPad
+    - ✅ Organizes learning tools by subject
+    - ✅ Easy to add new apps mid-year
+  </Tab>
+
+  <Tab title="Tracking Student Engagement">
+    **Analytics Dashboard:**
+
+    Teachers can monitor which students are using assigned apps:
+
+    **What You Can See:**
+    - Which students have accessed each app
+    - How frequently apps are being used
+    - Last access dates and times
+    - Engagement trends over time
+
+    **How to Use Analytics:**
+    1. Open **My Classes**
+    2. Select a class
+    3. Click **Analytics** or **Engagement**
+    4. View student usage data
+
+    **Use Cases:**
+    - Identify students who need tech support
+    - See which apps are most popular
+    - Follow up with students who haven't accessed required apps
+    - Adjust app assignments based on usage
+
+    <Note>
+      Analytics help teachers support students and optimize app usage, not for grading or evaluation.
+    </Note>
+  </Tab>
+
+  <Tab title="Communicating with Classes">
+    **Post Messages and Updates:**
+
+    Use My Classes to share important information with students:
+
+    **What You Can Share:**
+    - Class announcements
+    - Assignment reminders
+    - Important dates
+    - Links to resources
+    - Technology tips
+
+    **How to Post:**
+    1. Open **My Classes**
+    2. Select a class
+    3. Click **Post** or **Announce**
+    4. Write your message
+    5. Post to class
+
+    Students see messages when they open My Classes.
+
+    <Tip>
+      **Integration with LMS**: My Classes complements Google Classroom - use ClassLink for app management and Classroom for assignments!
+    </Tip>
+  </Tab>
+
+  <Tab title="Managing Class Rosters">
+    **Automatic Rostering:**
+
+    ClassLink automatically syncs class rosters from SAS student information systems.
+
+    **What This Means:**
+    - Students automatically added to your classes
+    - Roster updates when students transfer classes
+    - No manual roster management needed
+    - Apps assigned to entire class automatically
+
+    **If You Notice Roster Issues:**
+    1. Verify student enrollment in SIS (PowerSchool/Veracross)
+    2. Wait 24 hours for sync
+    3. Contact [edtech@sas.edu.sg](mailto:edtech@sas.edu.sg) if still incorrect
+
+    <Warning>
+      Teachers cannot manually add/remove students from ClassLink rosters - this must be done through the student information system.
+    </Warning>
+  </Tab>
+</Tabs>
+
+### Teacher Best Practices
+
+<Tip>
+  **Using My Classes Effectively:**
+
+  ✅ **Assign apps before unit starts** - Give students access in advance
+
+  ✅ **Review engagement weekly** - Check analytics to ensure all students have access
+
+  ✅ **Organize by subject** - Keep class-specific apps in My Classes, school-wide apps in main LaunchPad
+
+  ✅ **Communicate app expectations** - Tell students which apps they should see and use
+
+  ✅ **Remove unused apps** - Unassign apps when unit/semester ends to reduce clutter
+
+  ✅ **Coordinate with grade level teams** - Share which apps work well for your classes
+</Tip>
 
 ## Common ClassLink Apps
 
