--- a/guides/devices/device-information.mdx
+++ b/guides/devices/device-information.mdx
@@ -9,17 +9,17 @@ icon: "laptop-mobile"
 Singapore American School is an **Apple device school** with a carefully structured device program to support learning at every stage.
 
 <CardGroup cols={3}>
-  <Card title="Preschool - Grade 5" icon="tablet" color="#1A4190">
-    **iPads**
+  <Card title="Elementary (Grades 1-5)" icon="tablet" color="#1A4190">
+    **iPad**
 
-    Students use iPads for interactive learning, educational apps, and digital resources.
+    Elementary students use iPads for interactive learning, educational apps, and digital resources.
   </Card>
-  <Card title="Grade 6 - 8" icon="laptop" color="#E51322">
+  <Card title="Middle School (Grades 6-8)" icon="laptop" color="#E51322">
     **MacBook Air**
 
     Middle school students use MacBook Air laptops for coursework and collaboration.
   </Card>
-  <Card title="Grade 9 - 12" icon="laptop-code" color="#1A4190">
+  <Card title="High School (Grades 9-12)" icon="laptop-code" color="#1A4190">
     **BYOD (Bring Your Own Device)**
 
     High school students bring their own devices meeting SAS specifications.
@@ -28,80 +28,142 @@ Singapore American School is an **Apple device school** with a carefully structu
 
 ## Device Programs Overview
 
-### Elementary School (Preschool - Grade 5)
+### Elementary School (Grades 1-5)
 
 <AccordionGroup>
-  <Accordion title="iPad Program" icon="tablet-screen-button">
-    **Grades:** Preschool through Grade 5
+  <Accordion title="1:1 iPad Program" icon="tablet-screen-button">
+    **Grades:** 1 through 5
 
     **Device:** iPad (school-provided)
 
-    **What students can do:**
+    Every elementary student receives a school-provided iPad with protective case, earbuds, and carry pouch.
 
+    **What's Included:**
+    - Standard iPad
+    - Protective case
+    - Individual earbuds
+    - Carry pouch
+
+    **What students can do:**
     - Access educational apps through ClassLink
+    - Use Google Apps for Education
     - Create presentations and digital projects
     - Read digital books and resources
     - Complete assignments and assessments
     - Collaborate with classmates
+    - Student blogs for reflection and sharing work
 
     **Management:**
+    - Devices are managed by SAS IT via JAMF
+    - Apps are automatically installed via JAMF
+    - App access granted through ClassLink
+    - Parental controls configured
+    - Content filtering in place
 
-    - Devices are managed by SAS IT
-    - Apps are automatically installed via JAMF and access granted by Classlink
-    - Parental controls are configured
+    **App Installation:**
+    - Parents "gift" necessary apps via iTunes
+    - Students can install free apps
+    - iTunes accounts set up in parent's country
+
+    <Note>
+      **Learn more:** See the [Elementary Technology Guide](/guides/divisions/elementary-technology) for detailed information about technology in Elementary School.
+    </Note>
   </Accordion>
 </AccordionGroup>
 
-### Middle School (Grade 6 - 8)
+### Middle School (Grades 6-8)
 
 <AccordionGroup>
-  <Accordion title="MacBook Air Program" icon="laptop">
+  <Accordion title="1:1 MacBook Air Program" icon="laptop">
     **Grades:** 6, 7, and 8
 
-    **Device:** MacBook Air (school-provided)
+    **Device:** 13-inch MacBook Air (school-provided)
+
+    Every middle school student receives a school-provided MacBook Air with accessories and protective case.
+
+    **What's Included:**
+    - 13-inch MacBook Air
+    - Power supply
+    - Earbuds
+    - Protective hard cover
+    - Padded carrying case
 
     **What students can do:**
-
     - Use Google Workspace (Docs, Sheets, Slides)
-    - Access learning platforms via ClassLink
+    - Access Google Classroom (primary learning management system)
+    - Use ClassLink for all applications
+    - Install licensed software (students have admin rights)
     - Code and develop projects
     - Create multimedia presentations
     - Research and write academic papers
 
-    **Management:**
+    **Requirements:**
+    - Must bring laptop daily, fully charged
+    - Use only in supervised areas
+    - No laptops in cafeteria (headphones-only zone)
+    - No violent games
 
-    - Devices are managed by SAS IT
+    **Management:**
+    - Devices are managed by SAS IT via JAMF
     - Pre-configured with essential software
     - Access to all school systems and apps
+
+    **Skills Expectations:**
+    - Typing: 40 words per minute at 95% accuracy
+
+    <Note>
+      **Learn more:** See the [Middle School Technology Guide](/guides/divisions/middle-school-technology) for detailed information about technology in Middle School.
+    </Note>
   </Accordion>
 </AccordionGroup>
 
-### High School (Grade 9 - 12)
+### High School (Grades 9-12)
 
 <AccordionGroup>
-  <Accordion title="BYOD Program" icon="laptop-code">
+  <Accordion title="BYOD Program (Bring Your Own Device)" icon="laptop-code">
     **Grades:** 9, 10, 11, and 12
 
     **Device:** Student's own device (BYOD - Bring Your Own Device)
 
-    **Requirements:**
+    High school students are required to provide their own laptop that meets SAS technical specifications.
 
-    - Must meet SAS technical specifications
-    - Compatible with school systems and software
+    **Minimum Specifications:**
+    - **RAM:** 4GB minimum (8GB recommended)
+    - **Storage:** 256GB hard drive minimum
+    - **Wireless:** 802.11 N network card
+    - **Operating System:** macOS Ventura 13+ or Windows 11 (English)
+    - **Accessories:** Built-in webcam, earbuds/headset with microphone
+
+    **Purchasing:**
+    - Purchase from local retailers (Harvey Norman, Courts, Challenger)
+    - Must meet or exceed minimum specifications
     - Recommended: MacBook or compatible laptop
 
     **What students can do:**
-
     - Full access to Google Workspace
     - Use ClassLink for all applications
     - Connect to SAS WiFi network
     - Complete all coursework and projects
+    - Access specialized courses (AP Computer Science, Robotics, Mobile App Development, etc.)
+
+    **Requirements:**
+    - Bring laptop daily, fully charged
+    - Store in protective case
+    - Backup files regularly to Google Drive
+    - Audio must be muted unless permitted
+    - Internet access is filtered and monitored
 
     **Support:**
-
+    - Tech Help Center available in each division
+    - Short-term Chromebook loans available during repairs
+    - No loans for forgotten devices or low battery
+    - Printing available in library and Tech Help Center
     - Students responsible for device maintenance
     - SAS IT provides connectivity and software support
-    - Technical specifications available from IT
+
+    <Note>
+      **Learn more:** See the [High School BYOD Guide](/guides/divisions/high-school-byod) for complete laptop program details and requirements.
+    </Note>
   </Accordion>
 </AccordionGroup>
 
@@ -117,6 +179,20 @@ All devices at SAS integrate with our core technology platforms:
   **Need device support?** Contact [EdTech Support](mailto:edtech@sas.edu.sg) for educational technology questions or [IT Support](mailto:ithelp@sas.edu.sg) for hardware issues.
 </Note>
 
+## Division-Specific Technology Guides
+
+<CardGroup cols={3}>
+  <Card title="Elementary Technology" icon="tablet" href="/guides/divisions/elementary-technology">
+    Detailed guide for Grades 1-5
+  </Card>
+  <Card title="Middle School Technology" icon="laptop" href="/guides/divisions/middle-school-technology">
+    Detailed guide for Grades 6-8
+  </Card>
+  <Card title="High School BYOD" icon="laptop-code" href="/guides/divisions/high-school-byod">
+    Complete BYOD program guide
+  </Card>
+</CardGroup>
+
 ## Related Articles
 
 <CardGroup cols={2}>
@@ -129,7 +205,7 @@ All devices at SAS integrate with our core technology platforms:
   <Card title="Google Workspace" icon="google" href="/guides/accounts/google-workspace">
     Use Gmail, Docs, Sheets, and Slides
   </Card>
-  <Card title="Email Accounts" icon="envelope" href="/guides/accounts/email">
-    Learn about SAS email accounts
+  <Card title="JAMF Device Management" icon="gear" href="/guides/systems/jamf">
+    Learn about device management and Self Service
   </Card>
 </CardGroup>
