Documentation edits made through Mintlify web editor

--- a/ai-resources/ai-tools-overview.mdx
+++ b/ai-resources/ai-tools-overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "AI Tools Overview"
+title: "AI Hub"
 description: "Explore AI tools available at SAS and learn how to use them effectively and responsibly"
 icon: "brain-circuit"
 ---
