--- a/index.mdx
+++ b/index.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Welcome to SAS Technology Knowledge Base"
 description: "Your resource hub for technology guides, how-tos, systems, apps, and AI tools at Singapore American School"
+sidebarTitle: "Knowledgebase"
 ---
 
-## Welcome to The Eagle Way of Technology
+![Mintlifyknowldgebasebanners Pn](/images/Mintlifyknowldgebasebanners.png)
 
 The SAS Technology Knowledge Base is the main support portal for education technology at Singapore American School. Find guides, how-tos, and information about technology, systems, applications, and AI tools used throughout our community.
 
@@ -14,35 +15,16 @@ The SAS Technology Knowledge Base is the main support portal for education techn
 ## Quick Access
 
 <CardGroup cols={2}>
-  <Card
-    title="Technology Guides"
-    icon="book-open"
-    color="#1A4190"
-  >
+  <Card title="Technology Guides" icon="book-open" color="#1A4190">
     Step-by-step guides for common technology tasks and systems at SAS.
   </Card>
-
-  <Card
-    title="Apps & Tools"
-    icon="grid-2"
-    color="#E51322"
-  >
+  <Card title="Apps & Tools" icon="grid-2" color="#E51322">
     Information about applications and tools available to the SAS community.
   </Card>
-
-  <Card
-    title="AI Resources"
-    icon="brain-circuit"
-    color="#1A4190"
-  >
+  <Card title="AI Resources" icon="brain-circuit" color="#1A4190">
     Learn about AI tools and how to use them responsibly and effectively.
   </Card>
-
-  <Card
-    title="Systems & Platforms"
-    icon="server"
-    color="#E51322"
-  >
+  <Card title="Systems & Platforms" icon="server" color="#E51322">
     Access information about SAS technology systems and platforms.
   </Card>
 </CardGroup>
@@ -52,15 +34,11 @@ The SAS Technology Knowledge Base is the main support portal for education techn
 Need assistance? We have two support teams ready to help you.
 
 <CardGroup cols={2}>
-  <Card
-    title="EdTech Support (Level 0-1)"
-    icon="chalkboard-user"
-    color="#1A4190"
-    href="mailto:edtech@sas.edu.sg"
-  >
+  <Card title="EdTech Support (Level 0-1)" icon="chalkboard-user" color="#1A4190" href="mailto:edtech@sas.edu.sg">
     **Education Technology Team**
 
     Contact for:
+
     - Classroom technology & instructional tools
     - Learning management systems (LMS)
     - Educational apps & platforms
@@ -69,16 +47,11 @@ Need assistance? We have two support teams ready to help you.
 
     Email: [edtech@sas.edu.sg](mailto:edtech@sas.edu.sg)
   </Card>
-
-  <Card
-    title="IT Support (Level 1-2)"
-    icon="laptop"
-    color="#E51322"
-    href="mailto:ithelp@sas.edu.sg"
-  >
+  <Card title="IT Support (Level 1-2)" icon="laptop" color="#E51322" href="mailto:ithelp@sas.edu.sg">
     **IT Help Desk**
 
     Contact for:
+
     - Device issues & hardware support
     - Network & connectivity problems
     - Account access & passwords
@@ -96,48 +69,19 @@ Need assistance? We have two support teams ready to help you.
 ## Getting Started Guides
 
 <CardGroup cols={2}>
-  <Card
-    title="WiFi Connection"
-    icon="wifi"
-    href="/guides/getting-started/wifi-connection"
-    color="#1A4190"
-  >
+  <Card title="WiFi Connection" icon="wifi" color="#1A4190" href="/guides/getting-started/wifi-connection">
     Connect your device to the SAS wireless network
   </Card>
-
-  <Card
-    title="Email Accounts"
-    icon="envelope"
-    href="/guides/accounts/email"
-    color="#E51322"
-  >
+  <Card title="Email Accounts" icon="envelope" color="#E51322" href="/guides/accounts/email">
     Learn about SAS email for students and staff
   </Card>
-
-  <Card
-    title="ClassLink LaunchPad"
-    icon="grid-2"
-    href="/guides/accounts/classlink"
-    color="#1A4190"
-  >
+  <Card title="ClassLink LaunchPad" icon="grid-2" color="#1A4190" href="/guides/accounts/classlink">
     Access all your apps with single sign-on
   </Card>
-
-  <Card
-    title="Google Workspace"
-    icon="google"
-    href="/guides/accounts/google-workspace"
-    color="#E51322"
-  >
+  <Card title="Google Workspace" icon="google" color="#E51322" href="/guides/accounts/google-workspace">
     Use Gmail, Docs, Sheets, Slides and more
   </Card>
-
-  <Card
-    title="Device Information"
-    icon="laptop-mobile"
-    href="/guides/devices/device-information"
-    color="#1A4190"
-  >
+  <Card title="Device Information" icon="laptop-mobile" color="#1A4190" href="/guides/devices/device-information">
     iPads, MacBooks, and BYOD by grade level
   </Card>
 </CardGroup>
@@ -148,11 +92,9 @@ Need assistance? We have two support teams ready to help you.
   <Accordion title="For Parents" icon="users">
     Resources and guides for parents accessing SAS systems, communication tools, and student information.
   </Accordion>
-
   <Accordion title="For Students" icon="graduation-cap">
     How-tos for learning platforms, collaboration tools, and academic applications used at SAS.
   </Accordion>
-
   <Accordion title="For Faculty & Staff" icon="chalkboard-user">
     Guides for instructional technology, administrative systems, and professional tools.
   </Accordion>
@@ -161,19 +103,10 @@ Need assistance? We have two support teams ready to help you.
 ## Stay Connected
 
 <CardGroup cols={2}>
-  <Card
-    title="SAS Website"
-    icon="house"
-    href="https://www.sas.edu.sg"
-  >
+  <Card title="SAS Website" icon="house" href="https://www.sas.edu.sg">
     Visit our main website
   </Card>
-
-  <Card
-    title="Technology Support Portal"
-    icon="headset"
-    href="https://www.sas.edu.sg/support"
-  >
+  <Card title="Technology Support Portal" icon="headset" href="https://www.sas.edu.sg/support">
     Access the support portal
   </Card>
 </CardGroup>
